# 9-life

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: deploy-server.yml  deploy-web.yml  release-client.yml
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.css  App.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/icons/: icon.icns
client/src/assets/maps/: classic.json
client/src/components/: Board.tsx  Chat.tsx  EventDialog.tsx  EventToast.tsx  GameOverScreen.tsx  Lobby.tsx  PlayerInfo.tsx  Roulette.tsx  TurnBanner.tsx
client/src/hooks/: useGameSequencer.ts  useGameState.ts  useWebSocket.ts
client/src/types/: protocol.ts
docs/plans/: 2026-02-10-9-life-design.md
server/: Cargo.toml  Dockerfile  fly.toml
server/src/: classic.json  config.rs  main.rs
server/src/chat/: mod.rs
server/src/game/: engine.rs  events.rs  mod.rs  state.rs  traits.rs
server/src/protocol/: messages.rs
server/src/room/: manager.rs  mod.rs  models.rs
server/src/transport/: mod.rs  traits.rs  websocket.rs
server/src/web/: mod.rs
server/src/web/templates/: invite.html
